data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3753.wast
;; 2. **Test for Minimum Stack Depth with 'br_table' and 'call'**:    - This test pushes the minimum required values onto the stack, ensuring 'br_table' and subsequent 'call' operate correctly without additional stack depth.    - Create a 'br_table' targeting a few valid branches followed by a simple function call that requires a minimal stack.    - This checks for stack underflow scenarios caused by improper stack depth validation in 'br_table'.

(assert_invalid
  (module
    (func $br_table-and-call
      (block (block (block
        (br_table 0 1 2 (i32.const 1))
        (call 1 (i32.const 42))
      ))))
    )
    (func (param i32))
  )
  "type mismatch"
)